katars/tests/snaps/snapshots/snap_errors__empty_array.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let a = []\")"
---
Error: empty array literal — cannot infer element type
   ╭─[<test>:1:9]
   │
 1 │ let a = []
   │         ─┬  
   │          ╰── empty array literal — cannot infer element type
   │ 
   │ Help: array literals need at least one element to infer the type
───╯
